[tool.poetry]
name = "dj_djoser"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^4.6.0"
django-cors-headers = "^3.7.0"
drf-yasg = "^1.20.0"
black = "^21.5b1"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
